// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client"
  output   = "../src/generated/prisma"
}

datasource db {
  provider = "postgresql"
}

model User {
  id             String       @id @default(uuid())
  name           String
  email          String       @unique
  phone          String
  hashedPassword String
  role           String

  reports       Report[]
  reportVotes   ReportVote[]
  comments      Comment[]
}

model Report {
  id          String    @id @default(uuid())
  reportType  String
  description String
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt
  expiresAt   DateTime
  deletedAt   DateTime?
  reportedBy  String
  latitude    Float
  longitude   Float
  address     String
  zipCode     String?

  user        User          @relation(fields: [reportedBy], references: [id])
  votes       ReportVote[]
  comments    Comment[]
  attachments Attachment[]
}

model ReportVote {
  id        String   @id @default(uuid())
  reportId  String
  userId    String
  type      String
  createdAt DateTime @default(now())

  report    Report   @relation(fields: [reportId], references: [id])
  user      User     @relation(fields: [userId], references: [id])
}

model Comment {
  id        String   @id @default(uuid())
  reportId  String
  userId    String
  details   String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  report    Report   @relation(fields: [reportId], references: [id])
  user      User     @relation(fields: [userId], references: [id])
}

model Attachment {
  id        String   @id @default(uuid())
  reportId  String
  s3Key     String
  mimeType  String
  fileSize  Int
  createdAt DateTime @default(now())

  report    Report   @relation(fields: [reportId], references: [id])
}
